# Reti

./: .gitignore  .prettierrc  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pnpm-workspaces.yaml  prettier.config.js  rust-toolchain.toml  rustfmt.toml
.github/workflows/: calculator-ui.yml  parser.yml  repl.yml  reti-js.yml  reti-ui-common.yml  rust.yml  test.yml  ui-common.yml  web.yml
Reti-js/: Cargo.toml  init_test.sh  test.html
Reti-js/src/: lib.rs
lexer/: Cargo.toml
lexer/src/: ast.rs  lib.rs  state.rs  tokenizer.rs
lexer/src/ast/: mathexpr.rs
lexer/src/ast/mathexpr/: bin_ops.rs  customfunc.rs  diffirential.rs  fraction.rs  functions.rs  integral.rs  log.rs  matrix.rs  modulo.rs  number.rs  sqrt.rs  sum.rs  unary_functions.rs  unary_ops.rs
parser/: Cargo.toml  rustfmt.toml
parser/benches/: parser.rs
parser/src/: approximator.rs  ast.rs  consts.rs  context.rs  derivative.rs  error.rs  evaluator.rs  functions.rs  identifier.rs  lexer.rs  lib.rs  logging.rs  main.rs  matrix.rs  normalizer.rs  number_literal.rs  parser.rs  parsing.rs  prelude.rs  token.rs  token_reader.rs  value.rs
parser/src/ast/: derivative.rs  derive.rs  equality.rs  factorize.rs  factorize_gcd.rs  helper.rs  into.rs  mathexpr.rs  simplify.rs  to_latex.rs  tolatex.rs
parser/src/ast/mathexpr/: bin_ops.rs  customfunc.rs  diffirential.rs  fraction.rs  integral.rs  log.rs  matrix.rs  modulo.rs  number.rs  sqrt.rs  sum.rs  unary_functions.rs  unary_ops.rs  variable.rs
parser/src/consts/: functions.rs  numbers.rs
repl/: Cargo.toml
repl/src/: logging.rs  main.rs
reti-js/: Cargo.toml  init_test.sh  package.json  test.html
reti-js/src/: api.rs  lib.rs
reti-ui-common/: .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vite.config.ts
reti-ui-common/src/: App.svelte  App.test.ts  main.ts  wasm
reti-ui-common/src/lib/: CalculatorRow.svelte  CalculatorView.svelte  Counter.svelte  KaTeX.svelte
src/: lib.rs  main.rs
utils/: Cargo.toml
utils/src/: logging.rs
web/: Cargo.toml  index.html
web-apps/calculator/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
web-apps/calculator-ui/: package.json  pnpm-lock.yaml  vite.config.ts
web-apps/calculator/src/: App.svelte  App.test.ts
web-packages/common/: package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web-packages/common/src/: App.svelte  colors.css  main.ts  vitest-setup.ts  wasm
web-packages/common/src/lib/: Button.svelte  CalculatorRow.svelte  CalculatorView.svelte  CalculatorView.test.ts  KaTeX.svelte  KaTex.test.ts
web/src/: components.rs  logging.rs  main.rs
