[package]
name = "Reti-js"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.92"
parser = { path = "../parser/", features = ["serde"], default-features = false }
wasm-bindgen-futures = "0.4.42"
js-sys = "0.3.69"
serde = { version = "1.0.204", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[lib]
crate-type = ["cdylib"]
