[package]
name = "repl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
colored = "2.1.0"
directories = "5.0.1"
parser = {path="../parser/"}
rustyline = "14.0.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utils = {path="../utils/"}
