[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = {version="0.2.15", features = ["js"]}
katex = { version = "0.4.6", default-features = false, features = ["wasm-js"] }
leptos = { version = "0.6.11", features = ["nightly", "csr"] }
console_error_panic_hook = "0.1.7"
tracing = "0.1.40"
tracing-subscriber-wasm = "0.1.0"
tracing-subscriber = "0.3.18"

